@@ -68,7 +68,19 @@ class UsersControllerTest < ActionController::TestCase
   end
 
   test "should update user" do
-    put :update, id: @user, user: { first_name: 'FirstName', last_name: 'LastName', email: 'valid_updated_email@example.com' }, status: 'active', system_admin: false, administrator: false
+    put :update, id: @user, user: { first_name: 'FirstName', last_name: 'LastName', email: 'valid_updated_email@example.com', status: 'active', system_admin: false, administrator: false }
+    assert_redirected_to user_path(assigns(:user))
+  end
+
+  test "should update user and set user active" do
+    put :update, id: users(:pending), user: { status: 'active', first_name: users(:pending).first_name, last_name: users(:pending).last_name, email: users(:pending).email, system_admin: false, administrator: false }
+    assert_equal 'active', assigns(:user).status
+    assert_redirected_to user_path(assigns(:user))
+  end
+
+  test "should update user and set user inactive" do
+    put :update, id: users(:pending), user: { status: 'inactive', first_name: users(:pending).first_name, last_name: users(:pending).last_name, email: users(:pending).email, system_admin: false, administrator: false }
+    assert_equal 'inactive', assigns(:user).status
     assert_redirected_to user_path(assigns(:user))
   end
 
