@@ -3,6 +3,9 @@
 * Security Fix
   * Updated Rails to 3.2.10
 
+* Bug Fix
+  * User activation emails are no longer sent out when a user's status is changed from pending to inactive
+
 == 0.5.3
 
 * Enhancements
